--- a/FAQ.html
+++ b/FAQ.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QBIT: Smart Security</title>
+  <title>About Page</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -46,33 +46,7 @@
 <body>
   <div id="preloader"></div>
 
-<!--==========================
-  Hero Section
-============================-->
-  <section id="hero">
-    <div class="hero-container">
-      <div class="wow fadeIn">
-        <div class="hero-logo">
-          <!-- <img class="" src="img/logo.png" alt="Imperial"> -->
-        </div>
 
-       <h1>QBIT</h1><br><br>
-
-
-        <h1>Quantum Security Token</h1>
-
-        <h2><span class="rotating"> Secure Blockchain Applications, Patch Smart Contract Vulnerabilities, Nullify Zero Day Exploits </span></h2>
-
-    <div class="container">
-      <br>
-
-        <div class="actions">
-          <a href="#services" class="btn-get-started">Get Started</a>
-          <a href="#services" class="btn-services">Our Services</a>
-        </div>
-      </div>
-    </div>
-  </section>
 
 <!--==========================
   Header Section
@@ -80,14 +54,11 @@
   <header id="header">
     <div class="container">
 
-
-
       <div id="logo" class="pull-left">
-        <a href="#hero"><img src="img/logo.png" alt="" title="QBIT" /></img></a>
+        <a href="#hero"><img src="img/logo.png" alt="" title="" /></img></a>
         <!-- Uncomment below if you prefer to use a text image -->
         <!--<h1><a href="#hero">Header 1</a></h1>-->
       </div>
-
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
@@ -105,179 +76,16 @@
   </header><!-- #header -->
 
 <!--==========================
-  Services Section
+Section
 ============================-->
-  <section id="services">
-    <div class="container wow fadeInUp">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="section-title"> Post Quantum Security Solutions</h3>
-          <div class="section-title-divider"></div>
-          <p class="section-description"></p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-road"></i></div>
-          <h4 class="service-title"><a href="">Autonomous</a></h4>
-          <p class="service-description">The QBIT security applications function as smart contract layers, enforced by code</p>
-        </div>
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-paper-plane"></i></div>
-          <h4 class="service-title"><a href="">Intelligent</a></h4>
-          <p class="service-description">We integrate 'AAI' Artificial Artificial Intelligence as a mechanism to maximize efficiency and effectiveness. </p>
-        </div>
-        <div class="col-md-4 service-item">
-        <div class="service-icon"><i class="fa fa-photo"></i></div>
-        <h4 class="service-title"><a href="">Scalable</a></h4>
-        <p class="service-description">Easily deployable across networks and applications. Chain agnostic protocols allow for blockchain ambiguity. </p>
-        </div>
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-desktop"></i></div>
-          <h4 class="service-title"><a href="">Quantum Proof</a></h4>
-          <p class="service-description">Our technology addresses advances in computing, and ensures a security standard for when encryption becomes obsolete. </p>
-        </div>
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-bar-chart"></i></div>
-          <h4 class="service-title"><a href="">Distributed</a></h4>
-          <p class="service-description">The Peer to peer nature of these technologies enables verifiable consensus and atomic transactions across chains.</p>
-        </div>
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-shopping-bag"></i></div>
-          <h4 class="service-title"><a href="">100% Uptime</a></h4>
-          <p class="service-description"></p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!--==========================
-    Subscrbe Section
-  ============================-->
-    <section id="subscribe">
-      <div class="container wow fadeInUp">
-        <div class="row">
-          <div class="col-md-8">
-            <h3 class="subscribe-title">Smart Contract Security Layer</h3>
-            <p class="subscribe-text">QBIT's security applications function at the smart contract layer, deployable across multiple blockchains. </p>
-          </div>
-          <div class="col-md-4 subscribe-btn-container">
-            <a class="subscribe-btn" href="about.html">Learn More</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-<!--==========================
-  Porfolio Section
-============================-->
-  <section id="portfolio">
-    <div class="container wow fadeInUp">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="section-title">Applications</h3>
-          <div class="section-title-divider"></div>
-          <p class="section-description"></p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-3">
-          <a class="portfolio-item" style="background-image: url(img/portfolio-7.jpg);" href="applications.html">
-            <div class="details">
-              <h4>HoneyNet Network <br>Security Layer</h4>
-              <span></span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-md-3">
-          <a class="portfolio-item" style="background-image: url(img/portfolio-7.jpg);" href="applications.html">
-            <div class="details">
-              <h4>WikiVault <br> Distributed Storage</h4>
-              <span></span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-md-3">
-          <a class="portfolio-item" style="background-image: url(img/portfolio-7.jpg);" href="applications.html">
-            <div class="details">
-              <h4>Autonomous Defense <br>Application [ADA]</h4>
-              <span></span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-md-3">
-          <a class="portfolio-item" style="background-image: url(img/portfolio-7.jpg);" href="applications.html">
-            <div class="details">
-              <h4>Smart Contract <br>Vulnerability Scanner</h4>
-              <span></span>
-            </div>
-          </a>
-        </div>
 
 
-      </div>
-    </div>
-  </section>
 
 
-  <!--==========================
-    Subscrbe Section
-  ============================-->
-    <section id="subscribe2">
-      <div class="container wow fadeInUp">
-        <div class="row">
-          <div class="col-md-8">
-            <h3 class="subscribe-title">Subscribe To Our Newsletters, Updates and More!</h3>
-            <p class="subscribe-text">Join our mailing list to recieve the latest news for QBIT, as well as other resources and information we may share. We promise to only email you with relevant information, and will never spam or share your information with another party.</p>
-          </div>
-          <div class="col-md-4 subscribe-btn-container">
-            <a class="subscribe-btn" href="#">Sign Up</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-<!--==========================
-  Paetnerships Section
-============================-->
-<section id="team">
-  <div class="container wow fadeInUp">
-    <div class="row">
-      <div class="col-md-12">
-        <h3 class="section-title">Partnerships</h3>
-        <div class="section-title-divider"></div>
-        <p class="section-description"></p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-3">
-        <div class="member">
-          <div class="pic"><img src="img/team-1.jpg" alt=""></div>
-          <h4>UniBit Labs</h4>
-          <span>Blockchain Development Firm</span>
-          <div class="social">
-            <a href=""><i class="fa fa-twitter"></i></a>
-            <a href=""><i class="fa fa-facebook"></i></a>
-            <a href=""><i class="fa fa-google-plus"></i></a>
-            <a href=""><i class="fa fa-linkedin"></i></a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
 
 
-<!--==========================
-  Paetnerships Section
-============================-->
+
+
 
 <!-- My footer class -->
       <div class="myf">
@@ -348,8 +156,6 @@
       <!-- END FOOTER -->
 
 
-
-<!-- END WRAPPER -->
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- Required JavaScript Libraries -->
@@ -364,6 +170,7 @@
 
   <!-- Template Specisifc Custom Javascript File -->
   <script src="js/custom.js"></script>
+
   <script src="contactform/contactform.js"></script>
 
 
