--- a/about.html
+++ b/about.html
@@ -26,6 +26,9 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,900,700,700italic,400italic,300italic,300,100italic,100,900italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Dosis:400,500,700,800,600,300,200' rel='stylesheet' type='text/css'>
+
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,9 +62,13 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="menu-active"><a href="index.html"><strong>Home</strong></a></li>
+          <li><a href="about.html"><strong>About</strong></a></li>
+          <li><a href="services.html"><strong>Services</strong></a></li>
+          <li><a href="applications.html"><strong>Applications</strong></a></li>
+          <li><a href="downloads.html"><strong>Downloads</strong></a></li>
+          <li><a href="contact.html"><strong>Contact</strong></a></li>
+          <li><a href="FAQ.html"><strong>FAQ</strong></a></li>
 
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -85,13 +92,13 @@ About Section
       <div class="row">
         <div class="col-md-6 col-md-push-6 about-content">
           <h2 class="about-title">Our Job Is Security</h2>
-          <p class="about-text">
+          <p class="about-text">ABC
 
           </p>
-          <p class="about-text">
+          <p class="about-text">ABC
 
           </p>
-          <p class="about-text">
+          <p class="about-text">ABC
 
           </p>
         </div>
@@ -168,63 +175,73 @@ About Section
 
 
 
+    <!-- My footer class -->
+          <div class="myf">
+            <!-- FOOTER -->
+            <div class="bg-background">
+               <footer>
+                  <div class="container animatedParent">
+                     <div class="row animated fadeInDownShort">
+                        <div class="col-md-4">
+                           <!-- COLUMN 1 -->
+                           <h3 class="footer-heading"><strong>Our Mission:</strong></h3>
 
-      <!-- My footer class -->
-            <div class="myf">
-              <!-- FOOTER -->
-              <div class="bg-background">
-                 <footer>
-                    <div class="container animatedParent">
-                       <div class="row animated fadeInDownShort">
-                          <div class="col-md-4">
-                             <!-- COLUMN 1 -->
-                             <h3 class="footer-heading">OUR MISSION:</h3>
+                          <p>QBIT specializes in top level security solutions within the blockchain space for a post quantum environment. It is in our interest to develop and deploy integratable and scalable applications at the smart contract layer.</p>
+                            <br>
 
-                            <p>QBIT specializes in top level security solutions within the blockchain space for a post quantum environment. It is in our interest to develop and deploy integratable and scalable applications at the smart contract layer.</p>
-                              <br>
+                            <!-- END COLUMN 1 -->
+                         </div>
+                         <div class="col-md-4">
+                            <!-- COLUMN 2 -->
+                            <h3 class="footer-heading"><strong>Important Links:</strong></h3>
+                            <div class="row margin-bottom-30px">
+                               <div class="col-xs-6">
+                                  <ul class="list-unstyled footer-nav">
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="about.html">About</a></li>
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="contact.html">Contact</a></li>
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="services.html">Services</a></li>
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="applications.html">Applications</a></li>
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="downloads.html">Downloads</a></li>
 
-                              <!-- END COLUMN 1 -->
-                           </div>
-                           <div class="col-md-4">
-                              <!-- COLUMN 2 -->
-                              <h3 class="footer-heading">Important Links:</h3>
-                              <div class="row margin-bottom-30px">
-                                 <div class="col-xs-6">
-                                    <ul class="list-unstyled footer-nav">
-  																		 <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="#">Privacy </a></li>
-                                       <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="#">Terms of Use </a></li>
+                                  </ul>
+                               </div>
+                               <div class="col-xs-6">
+                                  <ul class="list-unstyled footer-nav">
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="press.html">Press</a></li>
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="newsletter.html">Newsletter</a></li>
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="privacy.html">Privacy Policy </a></li>
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="terms.html">Terms of Use </a></li>
+                                    <li><i class="fa fa-caret-right" aria-hidden="true"></i> <a href="FAQ.html">FAQ</a></li>
+                                  </ul>
+                               </div>
+                            </div>
+                            <!-- END COLUMN 2 -->
+                         </div>
+                         <div class="col-md-4">
+                            <!-- COLUMN 3 -->
 
-                                    </ul>
-                                 </div>
-                                 <div class="col-xs-6">
-                                    <ul class="list-unstyled footer-nav">
-                                    </ul>
-                                 </div>
-                              </div>
-                              <!-- END COLUMN 2 -->
-                           </div>
-                           <div class="col-md-4">
-                              <!-- COLUMN 3 -->
 
-                              <div class="social-connect">
-                                 <h3 class="footer-heading">Connect With Us:</h3>
-                                 <ul class="list-inline social-icons">
-                                    <li><a href="#" class="github-bg"><i class="fa fa-github"></i></a></li>
-                                    <li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#" class="slack-bg"><i class="fa fa-slack"></i></a></li>
-                                 </ul>
-                              </div>
-                              <!-- END COLUMN 3 -->
-                           </div>
-                        </div>
-                     </div>
-                     <!-- COPYRIGHT -->
-                     <div class="text-center copyright"> &copy;2017 QBIT, Quantum Bit. All Rights Reserved. </div>
-                     <!-- END COPYRIGHT -->
-                  </footer>
-               </div>
-            </div>
-            <!-- END FOOTER -->
+                               <h3 class="footer-heading"><strong>Connect With Us:</strong></h3>
+                               <ul class="list-inline social-icons">
+                                 <li><a href="#" class="github-bg"><i class="fa fa-github"></i></a></li>
+                                 <li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
+                                 <li><a href="#" class="telegram-bg"><i class="fa fa-telegram"></i></a></li>
+                                 <li><a href="#" class="slack-bg"><i class="fa fa-slack"></i></a></li>
+                                 <li><a href="#" class="linkedin-bg"><i class="fa fa-linkedin"></i></a></li>
+                                 <li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
+                               </ul>
+
+                            <!-- END COLUMN 3 -->
+                         </div>
+                      </div>
+                   </div>
+                   <!-- COPYRIGHT -->
+                   <div class="text-center copyright"> &copy;2017 QBIT, Quantum Bit. All Rights Reserved. </div>
+                   <!-- END COPYRIGHT -->
+                </footer>
+             </div>
+          </div>
+          <!-- END FOOTER -->
 
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
