--- a/about.html
+++ b/about.html
@@ -91,16 +91,24 @@ About Section
     <div class="container about-container wow fadeInUp">
       <div class="row">
         <div class="col-md-6 col-md-push-6 about-content">
-          <h2 class="about-title">Our Job Is Security</h2>
+
+          <h2 class="about-title">A Team of Pioneers</h2>
+          <p class="about-text">Our team is comprised of
+
+          </p>
+
+          <h2 class="about-title">Security Is Our Passion</h2>
+          <p class="about-text">At QBIT Labs our focus is on delivering an industry standard for security services and applications.
+            We are forward thinkers who develop technologies which stay relevant into the future and
+            address scenarios such as zero day exploits, and quantum attacks.
+
+          </p>
+
+          <h2 class="about-title"></h2>
           <p class="about-text">ABC
 
           </p>
-          <p class="about-text">ABC
 
-          </p>
-          <p class="about-text">ABC
-
-          </p>
         </div>
       </div>
     </div>
@@ -114,7 +122,7 @@ About Section
       <div class="container wow fadeInUp">
         <div class="row">
           <div class="col-md-12">
-            <h3 class="section-title">Our Team</h3>
+            <h3 class="section-title">Our Team:</h3>
             <div class="section-title-divider"></div>
             <p class="section-description"></p>
           </div>
@@ -123,9 +131,9 @@ About Section
         <div class="row">
           <div class="col-md-3">
             <div class="member">
-              <div class="pic"><img src="img/.jpg" alt=""></div>
-              <h4>Roy Hodge</h4>
-              <span>Lead Blockchain Engineer</span>
+              <div class="pic"><img src="img/matt.jpg" alt=""></div>
+              <h4>Matt England</h4>
+              <span>Visionary and Advisor</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
@@ -135,9 +143,9 @@ About Section
 
           <div class="col-md-3">
             <div class="member">
-              <div class="pic"><img src="img/.jpg" alt=""></div>
+              <div class="pic"><img src="img/hunter.jpg" alt=""></div>
               <h4>Hunter Simpson</h4>
-              <span>Lead Security Engineer</span>
+              <span>Chief Technology Officer</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
@@ -149,7 +157,7 @@ About Section
             <div class="member">
               <div class="pic"><img src="img/.jpg" alt=""></div>
               <h4>Jon Stokes</h4>
-              <span>Concept Developer</span>
+              <span>Concept Developer and Creative Director</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
@@ -159,15 +167,28 @@ About Section
 
           <div class="col-md-3">
             <div class="member">
-              <div class="pic"><img src="img/.jpg" alt=""></div>
+              <div class="pic"><img src="img/david.jpg" alt=""></div>
               <h4>David Rotenberg</h4>
-              <span>Business Strategy</span>
+              <span>Chief Financial Officer</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
+
+          <div class="row">
+            <div class="col-md-3">
+              <div class="member">
+                <div class="pic"><img src="img/roy.jpg" alt=""></div>
+                <h4>Roy Hodge</h4>
+                <span>Lead Blockchain Engineer</span>
+                <div class="social">
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
 
         </div>
       </div>
