--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@ About Section
 
           </p>
 
-          <h2 class="about-title"></h2>
+          <h2 class="about-title">Ease of Use Is Our Mission</h2>
           <p class="about-text">ABC
 
           </p>
