--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@ About Section
 
           <div class="col-md-3">
             <div class="member">
-              <div class="pic"><img src="img/.jpg" alt=""></div>
+              <div class="pic"><img src="img/jon.jpg" alt=""></div>
               <h4>Jon Stokes</h4>
               <span>Concept Developer and Creative Director</span>
               <div class="social">
