--- a/about.html
+++ b/about.html
@@ -128,18 +128,7 @@ About Section
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-md-3">
-            <div class="member">
-              <div class="pic"><img src="img/matt.jpg" alt=""></div>
-              <h4>Matt England</h4>
-              <span>Visionary and Advisor</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
+
 
           <div class="col-md-3">
             <div class="member">
@@ -194,6 +183,49 @@ About Section
       </div>
     </section>
 
+    <section id="team">
+      <div class="container wow fadeInUp">
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="section-title">Advisors:</h3>
+            <div class="section-title-divider"></div>
+            <p class="section-description"></p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3">
+            <div class="member">
+              <div class="pic"><img src="img/matt.jpg" alt=""></div>
+              <h4>Matt England</h4>
+              <span>Advisor</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+
+        <div class="row">
+          <div class="col-md-3">
+            <div class="member">
+              <div class="pic"><img src="img/richard.jpg" alt=""></div>
+              <h4>Richard Stallman</h4>
+              <span>Advisor</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+    </section>
 
 
     <!-- My footer class -->
