--- a/FAQ.html
+++ b/FAQ.html
@@ -82,7 +82,7 @@ Section
 
 
 
-
+<br><br><br><br><br><br><h3 class="section-title">Coming Soon..</h3><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
