--- a/applications.html
+++ b/applications.html
@@ -83,7 +83,33 @@ Section
 
 
 
+          <br><br>
+          <div class="container">
+            <h2>Autonomous Defense Application</h2>
+            <p></p>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/aCK1NpH3PF0?t=2s"></iframe>
+            </div>
+          </div>
 
+          </body>
+          </html>
+
+<br><br>
+
+          <div class="container">
+  <h1>WikiVault</h1>
+  <p></p>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-1xgQgANz2Q"></iframe>
+  </div>
+</div>
+
+</body>
+</html>
+
+
+          <br><br>
 
 
 
