--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="hero-container">
       <div class="wow fadeIn">
         <div class="hero-logo">
-          <!-- <img class="" src="img/logo.png" alt="Imperial"> -->
+          <!-- <img class="" src="img/logo.png" alt="QBIT"> -->
         </div>
 
        <h1>QBIT</h1><br><br>
@@ -121,7 +121,7 @@
         <div class="col-md-4 service-item">
           <div class="service-icon"><i class="fa fa-road"></i></div>
           <h4 class="service-title"><a href="">Autonomous</a></h4>
-          <p class="service-description">The QBIT security applications function as smart contract layers, enforced by code</p>
+          <p class="service-description">The QBIT security applications function as smart contract layers on the blockchain, which are enforced by code.</p>
         </div>
         <div class="col-md-4 service-item">
           <div class="service-icon"><i class="fa fa-paper-plane"></i></div>
@@ -146,7 +146,7 @@
         <div class="col-md-4 service-item">
           <div class="service-icon"><i class="fa fa-shopping-bag"></i></div>
           <h4 class="service-title"><a href="">100% Uptime</a></h4>
-          <p class="service-description"></p>
+          <p class="service-description">The decentralization of the computational resources which supports the QBIT network guarantee uninhibited access.</p>
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
         <div class="row">
           <div class="col-md-8">
             <h3 class="subscribe-title">Smart Contract Security Layer</h3>
-            <p class="subscribe-text">QBIT's security applications function at the smart contract layer, deployable across multiple blockchains. </p>
+            <p class="subscribe-text">QBIT's security applications function as a smart contract layer, deployable across multiple blockchains. Our post quantum technologies will give your dev ops peace of mind with next generation security solutions. </p>
           </div>
           <div class="col-md-4 subscribe-btn-container">
             <a class="subscribe-btn" href="about.html">Learn More</a>
