--- a/about.html
+++ b/about.html
@@ -93,19 +93,19 @@ About Section
         <div class="col-md-6 col-md-push-6 about-content">
 
           <h2 class="about-title">A Team of Pioneers</h2>
-          <p class="about-text">Our team is comprised of
+          <p class="about-text">Our team is comprised of passionate individuals with years of experience in the blockchain and security space. 
 
           </p>
 
           <h2 class="about-title">Security Is Our Passion</h2>
-          <p class="about-text">At QBIT Labs our focus is on delivering an industry standard for security services and applications.
+          <p class="about-text">At QBIT Labs our intention is delivering an industry standard for security services and applications.
             We are forward thinkers who develop technologies which stay relevant into the future and
             address scenarios such as zero day exploits, and quantum attacks.
 
           </p>
 
-          <h2 class="about-title">Ease of Use Is Our Mission</h2>
-          <p class="about-text">ABC
+          <h2 class="about-title">Ease of Use Is Our Focus</h2>
+          <p class="about-text">One of our top priorities for our products is providing ease of use and accessability to the full utility of our applications. 
 
           </p>
 
